@@ -30,6 +30,7 @@ typedef struct _hintdata {
   GtkWidget *pwCopy; /* copy button */
   GtkWidget *pwEvalPly; /* predefined eval buttons */
   GtkWidget *pwShow; /* button for showing moves */
+  GtkWidget *pwTempMap; /* button for showing temperature map */
   movelist *pml;
   int fButtonsValid;
   int fDestroyOnMove;
